Update troubleshooting documentation for node-exporter and modify Traefik metrics port to resolve scheduling conflicts on master-node. This ensures node-exporter can be deployed successfully when port 9100 is occupied.

--- a/manifests/traefik/helmchartconfig.yaml
+++ b/manifests/traefik/helmchartconfig.yaml
@@ -16,3 +16,9 @@ spec:
     # використовував мережевий стек хоста (де kube-proxy правила для Service IP працюють).
     hostNetwork: true
     dnsPolicy: ClusterFirstWithHostNet
+
+    # Порт метрик Traefik змінюємо з 9100 на 9102, щоб на master-node (hostNetwork) порт 9100
+    # був вільний для node-exporter (інакше под node-exporter не планується: "didn't have free ports").
+    ports:
+      metrics:
+        port: 9102
