Add Ingress resource to Portainer manifests and update README for HTTPS access details

--- a/manifests/portainer/kustomization.yaml
+++ b/manifests/portainer/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - persistentvolumeclaim.yaml
   - deployment.yaml
   - service.yaml
+  - ingress.yaml
 
 commonLabels:
   managed-by: kustomize
