Update troubleshooting documentation for Kubernetes Cluster dashboard in Prometheus. Added section addressing "No data / N/A" symptoms and provided steps for resolution, including verification of metrics and dashboard imports. Modified Prometheus config to use service name for kube-state-metrics to ensure target availability after pod restarts.

--- a/manifests/monitoring/prometheus/configmap.yaml
+++ b/manifests/monitoring/prometheus/configmap.yaml
@@ -55,7 +55,8 @@ data:
 
       - job_name: 'kube-state-metrics'
         static_configs:
-          - targets: ['10.42.2.24:8080']
+          # Service замість статичної IP пода — target залишається UP після перезапуску пода
+          - targets: ['kube-state-metrics.monitoring.svc.cluster.local:8080']
         scrape_interval: 30s
         scrape_timeout: 20s
 
